p4-translate/tests/ArrayLengthNegative.mj.err
 line 1, column 8: error: fixed array length must be non-negative
