p4-translate/tests/ArrayLengthNegative.mj
var v: array -1 of int;
